--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-:root {
+body {
   color: rgba(255, 255, 255, 0.87);
   background-image: url("src/assets/images/bg.webp");
   background-size: cover;
