--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
-body {
+:root {
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("src/assets/images/bg.webp");
+  background-image: url("/bg.webp");
   background-size: cover;
 }
