--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 
 :root {
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("src/assets/images/bg.webp");
+  background-image: url("/bg.webp");
   background-size: cover;
 }
